--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "devDependencies": {
     "@types/benchmark": "^1.0.31",
     "@types/glob": "^7.1.3",
+    "@types/jest": "^24.9.1",
     "@types/node": "^12.6.8",
     "@types/prettier": "1.10.0",
     "benchmark": "2.1.4",
@@ -54,7 +55,8 @@
     "tslint": "5.11.0",
     "tslint-config-standard": "8.0.1",
     "tslint-immutable": "^6.0.1",
-    "typescript": "^4.2.3"
+    "typescript": "^4.2.3",
+    "fp-ts": "^2.11.1"
   },
   "tags": [
     "typescript",
@@ -68,8 +70,7 @@
     "functional-programming",
     "lazy-evaluation"
   ],
-  "dependencies": {
-    "@types/jest": "^24.9.1",
-    "fp-ts": "^2.10.5"
+  "peerDependencies": {
+    "fp-ts": "^2.11.1"
   }
 }
